apps/events/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
  labels:
    app: events
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: events
