apps/events/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: events-wisvch-redirect
  namespace: default
  labels:
    app: events
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
    - events.wisv.ch
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: ch.tudelft.nl
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /events
            statusCode: 302
